folder structure css

--- a/index.html
+++ b/index.html
@@ -2,32 +2,73 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="theme-color" content="#FFFFFF" />
-    <meta name="keywords" content="" />
-    <meta name="author" content="Construtora Vital | Enjoy" />
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- === Title === -->
-    <meta name="title" content="Construtora Vital | Enjoy">
-    <title>Construtora Vital | Enjoy</title>
-    <!-- === Favicon === -->
-    <link rel="shortcut icon" type="image/svg" href="favicon.png">
-    <!-- === SWIPER SLIDE CSS === -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-    <!-- === CSS === -->
-    <link rel="stylesheet" href="css/plugins.css">
-    <link rel="stylesheet" href="css/main.css">
+    <!-- 2: preconnect font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <title>Enjoy | Construtor Vital</title>
+    <!-- CSS Links -->
+    <link rel="stylesheet" href="./css/plugins.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <!-- Phosphor Font Link -->
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="">
+    <!-- 3: display font -->
+
+    <!-- Fancyapps Library -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
   </head>
 <body>
-  <h1>Hello World</h1>
+  <main>
+    <!--=====================================================================-->
+    <!--=========== HEADER  ============-->
+    <!--=====================================================================-->
+    <header>
+      <div class="container">
+        
+      </div>
+    </header>
 
+    <!--=====================================================================-->
+    <!--=========== #1 HERO  ============-->
+    <!--=====================================================================-->
 
+    <!--=====================================================================-->
+    <!--=========== #2 PROJECT  ============-->
+    <!--=====================================================================-->
 
+    <!--=====================================================================-->
+    <!--=========== #3 INFO  ============-->
+    <!--=====================================================================-->
 
+    <!--=====================================================================-->
+    <!--=========== #4 PLANTA  ============-->
+    <!--=====================================================================-->
+
+    <!--=====================================================================-->
+    <!--=========== #5 PERSPECTIVA  ============-->
+    <!--=====================================================================-->
+
+    <!--=====================================================================-->
+    <!--=========== #5 FORMULARIO CONTATO  ============-->
+    <!--=====================================================================-->
+
+    <!--=====================================================================-->
+    <!--=========== #5 DIFERENCIAIS  ============-->
+    <!--=====================================================================-->
+
+    <!--=====================================================================-->
+    <!--=========== #6 REALIZACAO  ============-->
+    <!--=====================================================================-->
+
+    <!--=====================================================================-->
+    <!--=========== FOOTER  ============-->
+    <!--=====================================================================-->
+  </main>
 
   <!-- === JavaScript === -->
-  <script language="javascript" type="text/javascript" src="js/plugins.js"></script>
-  <script language="javascript" type="text/javascript" src="js/all.js"></script>
+  <script language="javascript" type="text/javascript" src="./js/plugins.js"></script>
+  <script language="javascript" type="text/javascript" src="./js/all.js"></script>
 </body>
 </html>
