Commit: menu and header structure

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="">
     <!-- 3: display font -->
-
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <!-- Fancyapps Library -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
   </head>
@@ -24,47 +24,120 @@
     <!--=====================================================================-->
     <!--=========== HEADER  ============-->
     <!--=====================================================================-->
-    <header>
+    <header class="js-header" id="js-header">
       <div class="container">
-        
+        <nav>
+          <ul>
+            <li><a href="#s__project" class="active js-link">O Projeto</a></li>
+            <li><a href="#s__location" class="js-link">Localização</a></li>
+            <li><a href="#s__planta" class="js-link">Plantas</a></li>
+            <li><a href="#s__perspectiva" class="js-link">Galeria de imagens realização</a></li>
+          </ul>
+        </nav>
+      </div>
+      <!--=====================================================================-->
+      <!--=========== MOBILE MENU  ============-->
+      <!--=====================================================================-->
+      <div class="mobile__menu">
+        <nav>
+          <ul>
+            <li><a href="">O Projeto</a></li>
+            <li><a href="">Localizacao</a></li>
+            <li><a href="">Plantas</a></li>
+            <li><a href="">Galeria de imagens realizacao</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
 
     <!--=====================================================================-->
     <!--=========== #1 HERO  ============-->
     <!--=====================================================================-->
+    <section class="" id="s__hero">
+      <div class="container">
+        <h1>hero</h1>
+      </div>
+    </section>
 
     <!--=====================================================================-->
     <!--=========== #2 PROJECT  ============-->
     <!--=====================================================================-->
+    <section class="section" id="s__project">
+      <div class="container">
+        <h1>Project</h1>
+      </div>
+    </section>
 
     <!--=====================================================================-->
-    <!--=========== #3 INFO  ============-->
+    <!--=========== #3 LOCATION  ============-->
     <!--=====================================================================-->
+    <section class="section" id="s__location">
+      <div class="container">
+        <h1>Location</h1>
+      </div>
+    </section>
 
     <!--=====================================================================-->
-    <!--=========== #4 PLANTA  ============-->
+    <!--=========== #4 INFO  ============-->
     <!--=====================================================================-->
+    <section class="" id="s__info">
+      <div class="container">
+        <h1>Info</h1>
+      </div>
+    </section>
 
     <!--=====================================================================-->
-    <!--=========== #5 PERSPECTIVA  ============-->
+    <!--=========== #5 PLANTA  ============-->
     <!--=====================================================================-->
+    <section class="section" id="s__planta">
+      <div class="container">
+        <h1>Planta</h1>
+      </div>
+    </section>
 
     <!--=====================================================================-->
-    <!--=========== #5 FORMULARIO CONTATO  ============-->
+    <!--=========== #6 PERSPECTIVA  ============-->
     <!--=====================================================================-->
+    <section class="section" id="s__perspectiva">
+      <div class="container">
+        <h1>perspectiva</h1>
+      </div>
+    </section>
 
     <!--=====================================================================-->
-    <!--=========== #5 DIFERENCIAIS  ============-->
+    <!--=========== #7 FORMULARIO CONTATO  ============-->
     <!--=====================================================================-->
+    <section class="" id="s__form">
+      <div class="container">
+        <h1>form</h1>
+      </div>
+    </section>
 
     <!--=====================================================================-->
-    <!--=========== #6 REALIZACAO  ============-->
+    <!--=========== #8 DIFERENCIAIS  ============-->
     <!--=====================================================================-->
+    <section class="" id="s__diferenciais">
+      <div class="container">
+        <h1>diferencias</h1>
+      </div>
+    </section>
+
+    <!--=====================================================================-->
+    <!--=========== #9 REALIZACAO  ============-->
+    <!--=====================================================================-->
+    <section class="" id="s__realizacao">
+      <div class="container">
+        <h1>realizacao</h1>
+      </div>
+    </section>
 
     <!--=====================================================================-->
     <!--=========== FOOTER  ============-->
     <!--=====================================================================-->
+    <footer>
+      <div class="container">
+      </div>
+    </footer>
   </main>
 
   <!-- === JavaScript === -->
