Section hero completed

--- a/index.html
+++ b/index.html
@@ -67,9 +67,13 @@
     <!--=====================================================================-->
     <!--=========== #1 HERO  ============-->
     <!--=====================================================================-->
-    <section class="" id="s__hero">
+    <section id="s__hero">
       <div class="container">
-        <h1>hero</h1>
+        <img src="./assets/logos/logo-enjoyblack.png" alt="Logo Enjoy" class="s__hero__logo__enjoy">
+        <div class="s__hero__logos">
+          <img src="./assets/logos/logo-caixa.png" alt="Logo Caixa">
+          <img src="./assets/logos/logo-mcmv.png" alt="Logo MCMV">
+        </div>
       </div>
     </section>
 
