--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
     <!--=====================================================================-->
     <footer>
       <div class="container">
+        <p>teste git</p>
       </div>
     </footer>
   </main>
