Section project done

--- a/index.html
+++ b/index.html
@@ -84,9 +84,13 @@
     <section class="section" id="s__project">
       <div class="s__project__left">
         <span>O projeto</span>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur autem natus dolore, facilis debitis deleniti perferendis, fuga ut soluta, provident at non excepturi commodi adipisci. Beatae aperiam ea aliquid quis!</p>
+        <img src="./assets/logos/logo-enjoywhite.png" alt="Logo white enjoy" title="Logo white enjoy">
+        <p>Acreditamos que cada amanhecer merece um sorriso, que cada passo dado em casa deve ser leve, e que uma jornada de transformar um lugar em lar e digno de celebração. No Enjoy, cada detalhe e uma expressão do nosso compromisso com sua felicidade.<br> <br>
+          <strong>Gostar não é suficiente, queremos que você ame onde mora.</strong>
+        </p>
         <a href="" class="btn-quotes">
           <p>Agendar uma visita</p>
+          <i class="ph-bold ph-arrow-right"></i>
         </a>
       </div>
       <div class="s__project__right">
@@ -101,7 +105,6 @@
             <div class="swiper-slide">
               <img src="./assets/bg/bg-fachadaenjoy.png" alt="">
             </div>
-            <div class="swiper-slide">Slide 3</div>
           </div>
         </div>
       </div>
@@ -112,7 +115,6 @@
     <!--=====================================================================-->
     <section class="section" id="s__location">
       <div class="container">
-        <h1>Location</h1>
       </div>
     </section>
 
@@ -121,7 +123,6 @@
     <!--=====================================================================-->
     <section class="" id="s__info">
       <div class="container">
-        <h1>Info</h1>
       </div>
     </section>
 
@@ -130,7 +131,6 @@
     <!--=====================================================================-->
     <section class="section" id="s__planta">
       <div class="container">
-        <h1>Planta</h1>
       </div>
     </section>
 
@@ -139,7 +139,6 @@
     <!--=====================================================================-->
     <section class="section" id="s__perspectiva">
       <div class="container">
-        <h1>perspectiva</h1>
       </div>
     </section>
 
@@ -148,7 +147,6 @@
     <!--=====================================================================-->
     <section class="" id="s__form">
       <div class="container">
-        <h1>form</h1>
       </div>
     </section>
 
@@ -157,7 +155,6 @@
     <!--=====================================================================-->
     <section class="" id="s__diferenciais">
       <div class="container">
-        <h1>diferencias</h1>
       </div>
     </section>
 
@@ -166,7 +163,6 @@
     <!--=====================================================================-->
     <section class="" id="s__realizacao">
       <div class="container">
-        <h1>realizacao</h1>
       </div>
     </section>
 
