section localizacao completa

--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
       <div class="s__project__left">
         <span>O projeto</span>
         <img src="./assets/logos/logo-enjoywhite.png" alt="Logo white enjoy" title="Logo white enjoy">
-        <p>Acreditamos que cada amanhecer merece um sorriso, que cada passo dado em casa deve ser leve, e que uma jornada de transformar um lugar em lar e digno de celebração. No Enjoy, cada detalhe e uma expressão do nosso compromisso com sua felicidade.<br> <br>
-          <strong>Gostar não é suficiente, queremos que você ame onde mora.</strong>
+        <p>Acreditamos que cada amanhecer merece um sorriso, que cada passo dado em casa deve ser leve, e que uma jornada de transformar um lugar em lar e digno de celebração. No Enjoy, cada detalhe e uma expressão do nosso compromisso com sua felicidade.<br> <br> <strong>Gostar não é suficiente, queremos que você ame onde mora.</strong>
         </p>
         <a href="" class="btn-quotes">
           <p>Agendar uma visita</p>
@@ -115,6 +114,20 @@
     <!--=====================================================================-->
     <section class="section" id="s__location">
       <div class="container">
+        <div class="s__location__title">
+          <div class="s__location__span">
+            <span>Localização</span>
+          </div>
+          <h3>Aproveite cada momento</h3>
+          <p>A localização do empreendimento ENJOY e privilegiada. Ao lado dos bairros de mais prestígio da cidade garante boa vizinhança e é sinônimo de boa valorização.</p>
+          <a href="" class="btn-quotes">
+            <p>Olhe no Google Maps</p>
+            <i class="ph-bold ph-arrow-right"></i>
+          </a>
+        </div>
+        <div class="s__location__video">
+          <iframe width="660" height="371" src="https://www.youtube.com/embed/w-f7G3Uk_xU?si=W9LoQC4RJq8awdtK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
       </div>
     </section>
 
