Section Information enjoy done

--- a/index.html
+++ b/index.html
@@ -134,7 +134,101 @@
     <!--=====================================================================-->
     <section class="" id="s__info">
       <div class="container">
-
+        <div class="s__info__slide">
+          <div class="f-carousel" id="carouselInformation">
+            <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Fachada" data-src="https://lipsum.app/id/60/1600x1200">
+              <img src="https://lipsum.app/id/60/1600x1200" alt="Enjoy Fachada" title="">
+            </div>
+            <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Entrada" data-src="https://lipsum.app/id/61/1600x1200">
+              <img src="https://lipsum.app/id/61/1600x1200" alt="Enjoy Entrada" title="">
+            </div>
+            <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Piscina" data-src="https://lipsum.app/id/62/1600x1200">
+              <img src="https://lipsum.app/id/62/1600x1200" alt="Enjoy Piscina">
+            </div>
+          </div>
+        </div>
+        <div class="s__info__title">
+          <img src="./assets/logos/logo-enjoywhite.png" alt="" class="s__info__logo">
+          <ul class="s__info__title__list">
+            <li>
+              <div class="icon">
+                <i class="ph ph-blueprint"></i>
+              </div>
+              <div>
+                <span>
+                  Numero de andares
+                </span>
+                <p>10 andares</p>
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <i class="ph ph-building-office"></i>
+              </div>
+              <div>
+                <span>
+                  Numero de andares
+                </span>
+                <p>10 andares</p>
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <i class="ph ph-car"></i>
+              </div>
+              <div>
+                <span>
+                  Numero de andares
+                </span>
+                <p>10 andares</p>
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <img src="./assets/icons/icon-andares.png" alt="">
+              </div>
+              <div>
+                <span>
+                  Numero de andares
+                </span>
+                <p>10 andares</p>
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <img src="./assets/icons/icon-andares.png" alt="">
+              </div>
+              <div>
+                <span>
+                  Numero de andares
+                </span>
+                <p>10 andares</p>
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <img src="./assets/icons/icon-andares.png" alt="">
+              </div>
+              <div>
+                <span>
+                  Numero de andares
+                </span>
+                <p>10 andares</p>
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <img src="./assets/icons/icon-andares.png" alt="">
+              </div>
+              <div>
+                <span>
+                  Numero de andares
+                </span>
+                <p>10 andares</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
 
