--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
       <div class="container">
         <div class="s__info__slide">
           <div class="f-carousel" id="carouselInformation">
-            <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Fachada" data-src="https://lipsum.app/id/60/1600x1200">
+            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Fachada" data-src="https://lipsum.app/id/60/1600x1200">
               <img src="https://lipsum.app/id/60/1600x1200" alt="Enjoy Fachada" title="">
             </div>
-            <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Entrada" data-src="https://lipsum.app/id/61/1600x1200">
+            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Entrada" data-src="https://lipsum.app/id/61/1600x1200">
               <img src="https://lipsum.app/id/61/1600x1200" alt="Enjoy Entrada" title="">
             </div>
-            <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Piscina" data-src="https://lipsum.app/id/62/1600x1200">
+            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Piscina" data-src="https://lipsum.app/id/62/1600x1200">
               <img src="https://lipsum.app/id/62/1600x1200" alt="Enjoy Piscina">
             </div>
           </div>
@@ -237,6 +237,26 @@
     <!--=====================================================================-->
     <section class="section" id="s__planta">
       <div class="container">
+        <div class="s__planta__slide">
+          <div class="f-carousel" id="carouselPlanta">
+            <div class="f-carousel__slide" data-fancybox="galleryPlanta" data-caption="Enjoy Planta" data-src="./assets/bg/bg-plantas.png">
+              <img src="./assets/bg/bg-plantas.png" alt="Enjoy Planta" title="">
+              <div class="slide__text">
+                <h3>Modelo Planta <br> Tipo A</h3>
+                <p>proposta de layout</p>
+                <span>Finais 01 | 02 | 03 | 04 | 05 | 06</span>
+              </div>
+            </div>
+            <div class="f-carousel__slide" data-fancybox="galleryPlanta" data-caption="Enjoy Planta" data-src="./assets/bg/bg-plantas.png">
+              <img src="./assets/bg/bg-plantas.png" alt="Enjoy Planta" title="">
+              <div class="slide__text">
+                <h3>Modelo Planta</h3>
+                <p>proposta de layout</p>
+                <span>Finais 01 | 02 | 03 | 04 | 05 | 06</span>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
