Feat: Começando Footer

--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- 2: preconnect font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title>Enjoy | Construtor Vital</title>
-    <!-- CSS Links -->
-    <link rel="stylesheet" href="./css/plugins.css">
-    <link rel="stylesheet" href="./css/main.css">
-    <!-- Phosphor Font Link -->
-    <script src="https://unpkg.com/@phosphor-icons/web"></script>
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="">
-    <!-- 3: display font -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <!-- Fancyapps Library -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
-  </head>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- 2: preconnect font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <title>Enjoy | Construtor Vital</title>
+  <!-- CSS Links -->
+  <link rel="stylesheet" href="./css/plugins.css">
+  <link rel="stylesheet" href="./css/main.css">
+  <!-- Phosphor Font Link -->
+  <script src="https://unpkg.com/@phosphor-icons/web"></script>
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="">
+  <!-- 3: display font -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <!-- Fancyapps Library -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
+  <!-- Font Awesome Icons social-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+</head>
+
 <body>
   <main>
     <!--=====================================================================-->
@@ -134,10 +140,86 @@
     <!--=====================================================================-->
     <!--=========== FOOTER  ============-->
     <!--=====================================================================-->
-    <footer>
+   <!--  <footer id="s__footer">
       <div class="container">
-        <p>teste git</p>
+
+        <div class="s_1">
+          <img src="./assets/logos/logo-vitalwhite.png" alt="Logo">
+          <div class="contato">
+            <p>(35) 3716 2950 - WhatsApp</p>
+            <p>contato@construtoravital.com</p>
+            <p>www.construtoravital.com</p>
+          </div>
+        </div>
+
+        <div class="s_2">
+
+          <img src="./assets/logos/logo-enjoywhite.png" alt="Logo">
+          <div class="contato">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non sem eget metus tristique tempor. Nunc
+              at justo rutrum, vehicula neque nec, auctor elit. Fusce diam ligula, aliquet sed consequat et, interdum
+              feugiat ante. Cras cursus risus eu diam finibus, vitae malesuada magna facilisis. Nam varius mollis ex ut
+              feugiat. Etiam facilisis urna sapien, vulputate aliquam nisl aliquet quis. Pellentesque at imperdiet nunc.
+              Praesent pretium tempus purus, ut varius nisi ultricies semper. Aliquam gravida lacus et dui suscipit
+              congue.
+
+              Donec molestie magna in arcu convallis bibendum. Duis eu lorem vel magna faucibus feugiat. Vestibulum ante
+              ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Integer varius, urna eget faucibus
+              lacinia, elit elit efficitur felis, quis auctor tellus lectus at ante. Aenean in odio finibus, tincidunt
+              nulla eget, tincidunt est. Pellentesque sit amet erat fermentum, accumsan sapien nec, tincidunt tellus.
+              Maecenas eu neque sed erat dapibus euismod at vitae tortor. Integer vel feugiat lectus. Vestibulum et
+              iaculis tellus.
+
+
+            </p>
+
+          </div>
+
+        </div>
+
       </div>
+    </footer> -->
+
+    <footer id="s__footer">
+      <div class="container">
+        <div class="left">
+          <img src="./assets/logos/logo-vitalwhite.png" alt="Qualidade">
+        </div>  
+
+        <div class="center">
+          <h1>Endereço</h1>
+
+          <ul>
+            <li><a>Rua Capitão Afonso Junqueira, 290 - Centro</a></li>
+            <li><a>Poços de Caldas - Minas Gerais</a></li>
+            <li><a>CEP: 37701-042</a></li>
+          </ul>
+
+          <ul>
+            <li><a>Razão Social – VITAL Incorporadora e Administradora Ltda.</a></li>
+            <li><a>CNPJ – 14.965.449/0001-07</a></li>
+          </ul>
+        </div>
+
+        <div class="right">
+          <h1>Fale Conosco</h1>
+
+          <ul>
+            <li><a>(35) 3716-2950</a></li>
+            <li><a>(35) 9 9167-3502</a></li>
+            <li><a>contato@construtoravital.com</a></li>
+          </ul>
+         
+          <div class="icons">
+            <a href="https://www.facebook.com/seu_perfil" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.youtube.com/seu_canal" target="_blank"><i class="fab fa-youtube"></i></a>
+            <a href="https://www.instagram.com/seu_perfil" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://wa.me/seu_numero_de_telefone" target="_blank"><i class="fab fa-whatsapp"></i></a>
+          </div>
+        </div>
+      </div>
+
     </footer>
   </main>
 
@@ -145,4 +227,5 @@
   <script language="javascript" type="text/javascript" src="./js/plugins.js"></script>
   <script language="javascript" type="text/javascript" src="./js/all.js"></script>
 </body>
+
 </html>
