--- a/index.html
+++ b/index.html
@@ -265,6 +265,34 @@
     <!--=====================================================================-->
     <section class="section" id="s__perspectiva">
       <div class="container">
+        <div class="s__perspectiva__slide">
+          <div class="f-carousel" id="carouselPerspectiva">
+            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01" data-src="./assets/bg/bg-fachadaenjoy.png">
+              <img src="./assets/bg/bg-fachadaenjoy.png" alt="Enjoy Apartamento 01" title="">
+              <div class="slide__info">
+                <p>Apartamento 01</p>
+              </div>
+            </div>
+            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01" data-src="./assets/bg/bg-fachadaenjoy.png">
+              <img src="./assets/bg/bg-fachadaenjoy.png" alt="Enjoy Apartamento 01" title="">
+              <div class="slide__info">
+                <p>Apartamento 01</p>
+              </div>
+            </div>
+            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01" data-src="./assets/bg/bg-fachadaenjoy.png">
+              <img src="./assets/bg/bg-fachadaenjoy.png" alt="Enjoy Apartamento 01" title="">
+              <div class="slide__info">
+                <p>Apartamento 01</p>
+              </div>
+            </div>
+            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01" data-src="./assets/bg/bg-fachadaenjoy.png">
+              <img src="./assets/bg/bg-fachadaenjoy.png" alt="Enjoy Apartamento 01" title="">
+              <div class="slide__info">
+                <p>Apartamento 01</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
