Feat: Section realização

--- a/index.html
+++ b/index.html
@@ -318,6 +318,29 @@
     <!--=====================================================================-->
     <section class="" id="s__realizacao">
       <div class="container">
+        <div class="left">
+          <h1>Realização</h1>
+
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nisl lorem, maximus nec eros eu, euismod ultrices arcu. In auctor pharetra arcu in posuere. Proin quis venenatis risus. Proin eget nunc a ex laoreet tempus at non lorem. Integer pretium interdum velit, sollicitudin gravida sem pellentesque nec. Duis egestas bibendum metus et tempor. Etiam semper tortor eu libero sodales finibus. Vivamus sodales lacus nec porta tempor. Vivamus placerat vitae enim non blandit. Mauris aliquet mi vel justo eleifend eleifend. Sed lobortis arcu sapien, eget sagittis sapien sollicitudin nec. Curabitur ac aliquam elit. 
+
+            <br><br>
+
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nisl lorem, maximus nec eros eu, euismod ultrices arcu. In auctor pharetra arcu in posuere. Proin quis venenatis risus. Proin eget nunc a ex laoreet tempus at non lorem. Integer pretium interdum velit, sollicitudin gravida sem pellentesque nec. Duis egestas bibendum metus et tempor. Etiam semper tortor eu libero sodales finibus. Vivamus sodales lacus nec porta tempor. Vivamus placerat vitae enim non blandit. Mauris aliquet mi vel justo eleifend eleifend. Sed lobortis arcu sapien, eget sagittis sapien sollicitudin nec. Curabitur ac aliquam elit. 
+
+            <br><br>
+
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nisl lorem, maximus nec eros eu, euismod ultrices arcu. In auctor pharetra arcu in posuere. Proin quis venenatis risus. Proin eget nunc a ex laoreet tempus at non lorem. Integer pretium interdum velit, sollicitudin gravida sem pellentesque nec. Duis egestas bibendum metus et tempor. Etiam semper tortor eu libero sodales finibus. Vivamus sodales lacus nec porta tempor. Vivamus placerat vitae enim non blandit. Mauris aliquet mi vel justo eleifend eleifend. Sed lobortis arcu sapien, eget sagittis sapien sollicitudin nec. Curabitur ac aliquam elit. 
+
+
+          </p>
+
+        </div>
+
+        <div class="right">
+          <img src="./assets/logos/logo-vitalblack.png" alt="">
+        </div>
+
       </div>
     </section>
 
